CM-378 Allow a counsel pa request (#117)
* Allow a counsle pa request

* Merge

* Tidy up counsel contract

* Fix swagger docs

---------

Co-authored-by: jdwoolcock <30227772+jdwoolcock@users.noreply.github.com>